app/base/apps/hangfire-ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hangfire-api
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`admin.sportdeets.com`) && (Path(`/api-jobs`) || PathPrefix(`/api-jobs/`))
      kind: Rule
      services:
        - name: api-service
          port: 8080
      middlewares:
        - name: hangfire-api-replacepath
          namespace: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hangfire-producer
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`admin.sportdeets.com`) && (Path(`/producer-jobs`) || PathPrefix(`/producer-jobs/`))
      kind: Rule
      services:
        - name: producer-svc-football-ncaa
          port: 80
      middlewares:
        - name: hangfire-producer-replacepath
          namespace: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hangfire-provider
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`admin.sportdeets.com`) && (Path(`/provider-jobs`) || PathPrefix(`/provider-jobs/`))
      kind: Rule
      services:
        - name: provider-svc-football-ncaa
          port: 80
      middlewares:
        - name: hangfire-provider-replacepath
          namespace: default
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hangfire-api-replacepath
  namespace: default
spec:
  replacePathRegex:
    regex: ^/api-jobs(.*)
    replacement: /dashboard$1
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hangfire-producer-replacepath
  namespace: default
spec:
  replacePathRegex:
    regex: ^/producer-jobs(.*)
    replacement: /dashboard$1
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hangfire-provider-replacepath
  namespace: default
spec:
  replacePathRegex:
    regex: ^/provider-jobs(.*)
    replacement: /dashboard$1
